# s7-plc-simulator

./: .gitignore  Cargo.toml  README.md  plc_config.json
docs/: test-spec.md
src/: lib.rs  main.rs  memory.rs  tests.rs
src/api/: mod.rs
src/static/: admin.html
