[package]
name = "s7-plc-simulator"
version = "0.1.0"
edition = "2021"
description = "Simulated S7 PLC for testing S7 Connector"
license = "MIT"
authors = ["philipgreat"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
thiserror = "1"
rand = "0.8"

[lib]
name = "s7_plc_simulator"
path = "src/lib.rs"

[[bin]]
name = "s7-plc-simulator"
path = "src/main.rs"
