[package]
name = "s7-plc-simulator"
version = "0.2.0"
edition = "2021"
description = "Simulated S7 PLC with Web Admin API"
license = "MIT"
authors = ["philipgreat"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
chrono = "0.4.44"

[lib]
name = "s7_plc_simulator"
path = "src/lib.rs"

[[bin]]
name = "s7-plc-simulator"
path = "src/main.rs"
